--- a/styles/light.css
+++ b/styles/light.css
@@ -68,8 +68,7 @@ section {
     background: #B4B4B4;
 }
 
-.buscar-wrap {
-    
+.buscar-wrap {    
     padding: 0.4rem;
 }
 
@@ -106,5 +105,14 @@ section {
     padding: 0.2rem;
 }
 
+.sugg-wrap {
+    display: flex;     
+}
+
 
 /* Tendencias */
+
+.trend-wrap {
+    display: flex;     
+    flex-wrap: wrap;
+}
