Append suggestions, event listeners

--- a/styles/light.css
+++ b/styles/light.css
@@ -116,3 +116,10 @@ section {
     display: flex;     
     flex-wrap: wrap;
 }
+
+/* Búsqueda */
+
+.search-wrap {
+    display: flex;     
+    flex-wrap: wrap;
+}
