--- a/styles/light.css
+++ b/styles/light.css
@@ -7,7 +7,7 @@ body { background: #fafafa; height: 100vh; margin: 0 auto; overscroll-behavior: 
 /* button{background-color:transparent; color:inherit; border:none; outline:none; border-width:0; padding:0; cursor:pointer;} */
 figure{margin:0;}
 input::-moz-focus-inner {border:0; padding:0; margin:0;}
-ul, ol, dd{margin:0; padding:0; list-style:none;}
+ul, li, ol, dd{margin:0; padding:0; list-style:none;}
 h1, h2, h3, h4, h5, h6{margin:0; font-size:inherit; font-weight:inherit;}
 p{margin:0;}
 cite {font-style:normal;}
@@ -63,15 +63,6 @@ section {
     margin-right: 12%;
 }
 
-.buscar {
-    display: block;
-    background: #B4B4B4;
-}
-
-.buscar-wrap {    
-    padding: 0.4rem;
-}
-
 .busqueda input {
     height: 2rem;
     width: 90%;    
@@ -103,6 +94,11 @@ section {
     font-size: 14px;
     height: 2rem;
     padding: 0.2rem;
+}
+
+.auto-wrap {
+    display: block;
+    background: #B4B4B4;
 }
 
 .sugg-wrap {
